compiler-core/src/error/snapshots/gleam_core__error__tests__lsp_message_receive_failed.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: Failed to receive LSP message

disconnected channel
