compiler-core/src/error/snapshots/gleam_core__error__tests__lsp_message_send_failed.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: Failed to send LSP message

sending on a disconnected channel
