compiler-core/src/error/snapshots/gleam_core__error__tests__output_files_already_exist_multiple.snap
---
source: compiler-core/src/error/tests.rs
expression: err.pretty_string()
---
error: Files already exist in target directory

  - wibble
  - wobble

If you want to overwrite these files, delete them and run the command again.
