compiler-core/src/error/snapshots/gleam_core__error__tests__output_files_already_exist_singular.snap
---
source: compiler-core/src/error/tests.rs
expression: err.pretty_string()
---
error: File already exists in target directory

  - wibble

If you want to overwrite this file, delete it and run the command again.
