compiler-core/src/error/snapshots/gleam_core__error__tests__rebar3-macos-unknown.snap
---
source: compiler-core/src/error/tests.rs
expression: "err[0].text"
---
The program `rebar3` was not found. Is it installed?
Documentation for installing rebar3 can be viewed here:
https://gleam.run/getting-started/installing/
https://rebar3.org/docs/getting-started/
You can install rebar3 via homebrew: brew install rebar3
