compiler-core/src/error/snapshots/gleam_core__error__tests__removed_package_names_invalid_with_multiple_suggestions.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: Invalid package names

These are not valid package names, so they could not be removed.

  - gleam_otp@1
  - lustre@4
  - Wibble

Package names must start with a lowercase letter and may only contain
lowercase letters, numbers and underscores.

Hint: Did you mean `gleam_otp` and `lustre`?
